--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,28 +6,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="icon" href="frontend/production/images/favicon.png" type="image/ico" />
+	  <link rel="icon" href="production/images/favicon.png" type="image/ico" />
 
     <title>Internship Management System </title>
 
     <!-- Bootstrap -->
-    <link href="frontend/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="frontend/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="frontend/vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- iCheck -->
-    <link href="frontend/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 	
     <!-- bootstrap-progressbar -->
-    <link href="frontend/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+    <link href="vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
     <!-- JQVMap -->
-    <link href="frontend/vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
+    <link href="vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
     <!-- bootstrap-daterangepicker -->
-    <link href="frontend/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="frontend/build/css/custom.min.css" rel="stylesheet">
+    <link href="build/css/custom.min.css" rel="stylesheet">
   </head>
 
   <body class="nav-md">
@@ -36,7 +36,7 @@
         <div class="col-md-3 left_col">
           <div class="left_col scroll-view">
             <div class="navbar nav_title" style="border: 0;">
-              <a href="index.html" class="site_title"><i class="fa fa-users"></i> <span>SLIIT IMS</span></a>
+              <a href="home.html" class="site_title"><i class="fa fa-users"></i> <span>SLIIT IMS</span></a>
             </div>
 
             <div class="clearfix"></div>
@@ -44,11 +44,11 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <img src="frontend/production/images/img.jpg" alt="..." class="img-circle profile_img">
+                <img src="production/images/user.png" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>Jhon</h2>
+                <h2><div id="userwelcome"></div></h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -61,16 +61,16 @@
                 <ul class="nav side-menu">
                   <li><a><i class="fa fa-home"></i> Home <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="index.html">Dashboard</a></li>
+                      <li><a href="home.html">Dashboard</a></li>
                     </ul>
                   </li>
                   <li><a><i class="fa fa-edit"></i> Forms <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                      <li><a href="form.html">Form I-1</a></li>
-                      <li><a href="form_advanced.html">Form I-3</a></li>
-                      <li><a href="form_validation.html">Form I-5</a></li>
-                      <li><a href="form_wizards.html">Form I-6</a></li>
-                      <li><a href="form_upload.html">Form I-7</a></li>
+                      <li><a class="form_I_1" id="form_I_1a">Form I-1</a></li>
+                      <li><a class="form_I_3" id="form_I_3a">Form I-3</a></li>
+                      <li><a class="form_I_5" id="form_I_5a">Form I-5</a></li>
+                      <li><a class="form_I_6" id="form_I_6a">Form I-6</a></li>
+                      <li><a class="form_I_7" id="form_I_7a">Form I-7</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -90,7 +90,7 @@
               <a data-toggle="tooltip" data-placement="top" title="Lock">
                 <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
               </a>
-              <a data-toggle="tooltip" data-placement="top" title="Logout" href="frontend/login.html">
+              <a data-toggle="tooltip" data-placement="top" title="Logout" id="logout1">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
               </a>
             </div>
@@ -109,7 +109,7 @@
               <ul class="nav navbar-nav navbar-right">
                 <li class="">
                   <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                    <img src="frontend/production/images/img.jpg" alt="">John Doe
+                    <img src="production/images/user.png" alt=""><span id="username"></span>
                     <span class=" fa fa-angle-down"></span>
                   </a>
                   <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -121,7 +121,7 @@
                       </a>
                     </li>
                     <li><a href="javascript:;">Help</a></li>
-                    <li><a href="frontend/login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
+                    <li><a id="logout2" ><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
                   </ul>
                 </li>
 
@@ -133,7 +133,7 @@
                   <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                     <li>
                       <a>
-                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -145,7 +145,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -157,7 +157,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -169,7 +169,7 @@
                     </li>
                     <li>
                       <a>
-                        <span class="image"><img src="frontend/production/images/img.jpg" alt="Profile Image" /></span>
+                        <span class="image"><img src="production/images/img.jpg" alt="Profile Image" /></span>
                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -199,41 +199,33 @@
         <div class="right_col" role="main">
           <!-- top tiles -->
            <div class="row tile_count">
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a id="form_I_1a" > Form I-1</a></span>
-              <div class="image"><a id="form_I_1b" ><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-              <!--<span class="count_bottom"><i class="green">4% </i> From last Week</span>-->
+            <div class="col-md-1 col-sm-4 col-xs-6 ">
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-clock-o"></i><a id="form_I_3a"> Form I-3 </a></span>
-              <div class="image"><a id="form_I_3b" ><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-              <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>3% </i> From last Week</span>-->
+            <div class="col-md-2 col-sm-4 col-xs-6 ">
+              <span class="count_top"><i class="fa fa-edit"></i><a class="form_I_1" id="form_I_1b"> Form I-1</a></span>
+              <div class="image"><a class="form_I_1" id="form_I_1c"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="frontend/form1.html"> Form I-4 </a></span>
-              <div class="image"><a href="frontend/form1.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-              <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
+            <div class="col-md-2 col-sm-4 col-xs-6 ">
+              <span class="count_top"><i class="fa fa-edit"></i><a class="form_I_3" id="form_I_3b"> Form I-3 </a></span>
+              <div class="image"><a class="form_I_3" id="form_I_3c"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i> <a href="form5.html">Form I-5 </a></span>
-              <div class="image"><a href="form5.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-              <!--<span class="count_bottom"><i class="red"><i class="fa fa-sort-desc"></i>12% </i> From last Week</span>-->
+            <div class="col-md-2 col-sm-4 col-xs-6 ">
+              <span class="count_top"><i class="fa fa-edit"></i> <a class="form_I_5" id="form_I_5b">Form I-5 </a></span>
+              <div class="image"><a class="form_I_5" id="form_I_5c"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="form6.html"> Form I-6 </a></span>
-              <div class="image"><a href="form6.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-             <!-- <span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
+            <div class="col-md-2 col-sm-4 col-xs-6 ">
+              <span class="count_top"><i class="fa fa-edit"></i><a class="form_I_6" id="form_I_6b"> Form I-6 </a></span>
+              <div class="image"><a class="form_I_6" id="form_I_6c"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
             </div>
-            <div class="col-md-2 col-sm-4 col-xs-6 tile_stats_count">
-              <span class="count_top"><i class="fa fa-user"></i><a href="form7.html"> Form I-7</a></span>
-              <div class="image"><a href="form7.html"><img src="frontend/production/images/spm.png" alt="Profile Image" /></a></div>
-              <!--<span class="count_bottom"><i class="green"><i class="fa fa-sort-asc"></i>34% </i> From last Week</span>-->
+            <div class="col-md-2 col-sm-4 col-xs-6 ">
+              <span class="count_top"><i class="fa fa-edit"></i><a class="form_I_7" id="form_I_7b"> Form I-7</a></span>
+              <div class="image"><a class="form_I_7" id="form_I_7c"><img src="production/images/spm.png" alt="Profile Image" /></a></div>
             </div>
           </div> 
           <!-- /top tiles -->
 
           <div class="row tile_count" id="forms">
-            <img style="float:right" src="frontend/production/images/SLIIT.png" alt="SLIIT" width="100%">
+            <img style="float:right" src="production/images/SLIIT.png" alt="SLIIT" width="100%">
             
           </div>
 
@@ -253,48 +245,48 @@
     </div>
 
     <!-- jQuery -->
-    <script src="frontend/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="vendors/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap -->
-    <script src="frontend/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="vendors/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- FastClick -->
-    <script src="frontend/vendors/fastclick/lib/fastclick.js"></script>
+    <script src="vendors/fastclick/lib/fastclick.js"></script>
     <!-- NProgress -->
-    <script src="frontend/vendors/nprogress/nprogress.js"></script>
+    <script src="vendors/nprogress/nprogress.js"></script>
     <!-- Chart.js -->
-    <script src="frontend/vendors/Chart.js/dist/Chart.min.js"></script>
+    <script src="vendors/Chart.js/dist/Chart.min.js"></script>
     <!-- gauge.js -->
-    <script src="frontend/vendors/gauge.js/dist/gauge.min.js"></script>
+    <script src="vendors/gauge.js/dist/gauge.min.js"></script>
     <!-- bootstrap-progressbar -->
-    <script src="frontend/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+    <script src="vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
     <!-- iCheck -->
-    <script src="frontend/vendors/iCheck/icheck.min.js"></script>
+    <script src="vendors/iCheck/icheck.min.js"></script>
     <!-- Skycons -->
-    <script src="frontend/vendors/skycons/skycons.js"></script>
+    <script src="vendors/skycons/skycons.js"></script>
     <!-- Flot -->
-    <script src="frontend/vendors/Flot/jquery.flot.js"></script>
-    <script src="frontend/vendors/Flot/jquery.flot.pie.js"></script>
-    <script src="frontend/vendors/Flot/jquery.flot.time.js"></script>
-    <script src="frontend/vendors/Flot/jquery.flot.stack.js"></script>
-    <script src="frontend/vendors/Flot/jquery.flot.resize.js"></script>
+    <script src="vendors/Flot/jquery.flot.js"></script>
+    <script src="vendors/Flot/jquery.flot.pie.js"></script>
+    <script src="vendors/Flot/jquery.flot.time.js"></script>
+    <script src="vendors/Flot/jquery.flot.stack.js"></script>
+    <script src="vendors/Flot/jquery.flot.resize.js"></script>
     <!-- Flot plugins -->
-    <script src="frontend/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-    <script src="frontend/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-    <script src="frontend/vendors/flot.curvedlines/curvedLines.js"></script>
+    <script src="vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+    <script src="vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
+    <script src="vendors/flot.curvedlines/curvedLines.js"></script>
     <!-- DateJS -->
-    <script src="frontend/vendors/DateJS/build/date.js"></script>
+    <script src="vendors/DateJS/build/date.js"></script>
     <!-- JQVMap -->
-    <script src="frontend/vendors/jqvmap/dist/jquery.vmap.js"></script>
-    <script src="frontend/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-    <script src="frontend/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
+    <script src="vendors/jqvmap/dist/jquery.vmap.js"></script>
+    <script src="vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
+    <script src="vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
     <!-- bootstrap-daterangepicker -->
-    <script src="frontend/vendors/moment/min/moment.min.js"></script>
-    <script src="frontend/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="vendors/moment/min/moment.min.js"></script>
+    <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
 
     <!-- Custom Theme Scripts -->
-    <script src="frontend/build/js/custom.min.js"></script>
+    <script src="build/js/custom.min.js"></script>
 
     <!-- form inside Scripts -->
-    <script src="frontend/build/js/form_inside_dashboard.js"></script>
+    <script src="build/js/home.js"></script>
     	
   </body>
 </html>
