--- a/frontend/login.html
+++ b/frontend/login.html
@@ -7,26 +7,26 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="production/images/favicon.png" type="image/ico" />
+    <link rel="icon" href="frontend/production/images/favicon.png" type="image/ico" />
     
     <title>IMS | Login</title>
 
     <!-- Bootstrap -->
-    <link href="vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="frontend/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="frontend/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="frontend/vendors/nprogress/nprogress.css" rel="stylesheet">
     <!-- Animate.css -->
-    <link href="vendors/animate.css/animate.min.css" rel="stylesheet">
+    <link href="frontend/vendors/animate.css/animate.min.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="build/css/custom.min.css" rel="stylesheet">
-    <script src="../sweetalert2.all.min.js"></script>
-    <script src="production/js/jquery.min.js"></script>
+    <link href="frontend/build/css/custom.min.css" rel="stylesheet">
+    <script src="sweetalert2.all.min.js"></script>
+    <script src="frontend/production/js/jquery.min.js"></script>
 </head>
 
-<body class="login">
+<body class="login" onload="back_block();">
 <div>
     <a class="hiddenanchor" id="signup"></a>
     <a class="hiddenanchor" id="signin"></a>
@@ -50,106 +50,19 @@
                         <input type="password" class="form-control" placeholder="Password" id= "password" required="" />
                     </div>
                     <div>
-                        <a class="btn btn-default submit" id="login" >Log in</a>
+                        <a class="btn btn-default submit" id="login">Log in</a>
                         <a class="reset_pass" href="#">Lost your password?</a>
-                        <a class="reset_pass" href="registration.html">New to IMS System??</a>
+                        <a class="reset_pass" href="frontend/registration.html">New to IMS System??</a>
                     </div>
 
                     <div class="clearfix"></div>
 
                 </form>
-                <script type="text/javascript">
-                    $(document).ready(function () {
-                        // if (localStorage.getItem('token')) {
-                        //     window.location.href = "index.html";
-                        //     return;
-                        // }
-
-                        $("#login").click(function (event) {
-                            event.preventDefault();
-                            var data = {};
-
-                            data.type = $("input[type='radio'].flat:checked").val();
-
-                            data.email = $("#email").val();
-                            data.password = $("#password").val();
-
-                            if (data.email.trim() == "" || data.password == "") {
-
-
-                                    swal({title: "Error", text: " Email and Password are Required!" , type: "error"});
-
-
-                                return;
-                            }
-                            $.ajax({
-                                url: 'http://localhost:3000/login',
-                                contentType: "application/json; charset=utf-8",
-                                data: JSON.stringify(data),
-                                type: 'POST',
-                                success: function (res) {
-                                    console.log(res)
-                                    if (res.error) {
-                                        swal({title: "Error", text: res.error, type: "error"});
-                                    }
-                                    else {
-                                        localStorage.setItem('token', res.token);
-                                        localStorage.setItem('name', res.name);
-                                        if(data.type == "student")
-                                        {
-                                            window.location.href = "signup.html";
-                                        }
-
-                                    }
-                                }
-                            });
-                        });
-                    })
-                </script>
             </section>
         </div>
     </div>
 </div>
-
-<!--<script type="text/javascript">-->
-<!--$(document).ready(function () {-->
-
-<!--$("#login").click(function (event) {-->
-<!--event.preventDefault();-->
-<!--var data = {};-->
-<!--data.email = $("#username").val();-->
-<!--data.password = $("#Password").val();-->
-<!--data.type = $("#type").val();-->
-
-<!--if (data.email.trim() == "" || data.password == "") {-->
-<!--swal({title: "Error", text: "Email and Password are Required!", type: "error"});-->
-<!--return;-->
-<!--}-->
-<!--$.ajax({-->
-<!--url: 'http://localhost:3000/login',-->
-<!--contentType: "application/json; charset=utf-8",-->
-<!--data: JSON.stringify(data),-->
-<!--type: 'POST',-->
-<!--success: function (res) {-->
-<!--console.log(res)-->
-<!--if (res.error) {-->
-<!--swal({title: "Error", text: res.error, type: "error"});-->
-<!--}-->
-<!--else {-->
-<!--localStorage.setItem('token', res.token);-->
-<!--localStorage.setItem('name', res.name);-->
-<!--if(data.type == Student){-->
-<!--window.location.href = "../index.html";-->
-<!--}-->
-
-<!--}-->
-<!--}-->
-<!--});-->
-<!--});-->
-<!--})-->
-<!--</script>-->
-
-
+<script src="frontend/build/js/login.js"></script>
 </body>
 </html>
 
